Add shell script to run the tests easier

--- a/env.example
+++ b/env.example
@@ -1,2 +1,5 @@
 BROWSER=chromium  # use: chromium | firefox | webkit
 HEADLESS=false    # use: true | false
+WIDTH=1680
+HEIGHT=844
+BASE_URL=https://www.saucedemo.com/
