Add parallelism with pytest-xdist

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --slowmo=2000 --output=results --tracing=retain-on-failure --screenshot=only-on-failure --video=retain-on-failure --template=html1/index.html --report=results/report.html
+addopts = --dist=loadfile --numprocesses=auto --maxprocesses=5 --slowmo=2000 --output=results --tracing=retain-on-failure --screenshot=only-on-failure --video=retain-on-failure --template=html1/index.html --report=results/report.html
